WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/Historical_Mars_Meeting__c.object-meta.xml
<CustomObject>
    <label>Historical Mars Meeting</label>
    <nameField>
        <displayFormat>HMM-{000000}</displayFormat>
        <label>Historical Mars Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Mars Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>