WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Historical Mars Meetings (Attendee)</relationshipLabel>
    <relationshipName>Historical_Mars_Meetings1</relationshipName>
    <type>Lookup</type>
</CustomField>