WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Historical Mars Meetings</relationshipLabel>
    <relationshipName>Historical_Mars_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>