WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <label>Meeting Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>