WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/fields/Meeting_Topic__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Topic__c</fullName>
    <label>Meeting Topic</label>
    <length>40</length>
    <type>Text</type>
</CustomField>