WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-on-1 Meeting</fullName>
            </value>
            <value>
                <fullName>Branch Meeting</fullName>
            </value>
            <value>
                <fullName>Client and Rep Meeting</fullName>
            </value>
            <value>
                <fullName>Client Seminar</fullName>
            </value>
            <value>
                <fullName>Conference Call</fullName>
            </value>
            <value>
                <fullName>Home Office Meeting</fullName>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Appointment</fullName>
            </value>
            <value>
                <fullName>PM Conference Call</fullName>
            </value>
            <value>
                <fullName>Portfolio Manager Meeting</fullName>
            </value>
            <value>
                <fullName>Regional Meeting/Conference</fullName>
            </value>
            <value>
                <fullName>Stop By Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>