WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/fields/Old_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Activity_ID__c</fullName>
    <label>Old Activity ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>