WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atlantis China Fund MF</fullName>
            </value>
            <value>
                <fullName>Atlantis China Fund SMA</fullName>
            </value>
            <value>
                <fullName>Atlantis China Healthcare Fund MF</fullName>
            </value>
            <value>
                <fullName>Atlantis China Healthcare Fund SMA</fullName>
            </value>
            <value>
                <fullName>Capital Innovations Glbl Agri, Timber, A</fullName>
            </value>
            <value>
                <fullName>Capital Innovations Glbl Agri, Timber, C</fullName>
            </value>
            <value>
                <fullName>Capital Innovations Glbl Agri, Timber, I</fullName>
            </value>
            <value>
                <fullName>Center Coast Capital MLP SMA</fullName>
            </value>
            <value>
                <fullName>Center Coast MLP &amp; Infrastructure Fund</fullName>
            </value>
            <value>
                <fullName>Center Coast MLP Collective Fund</fullName>
            </value>
            <value>
                <fullName>Center Coast MLP Focus Fund A</fullName>
            </value>
            <value>
                <fullName>Center Coast MLP Focus Fund C</fullName>
            </value>
            <value>
                <fullName>Center Coast MLP Focus Fund I</fullName>
            </value>
            <value>
                <fullName>Chilton Realty Income Growth Fund A</fullName>
            </value>
            <value>
                <fullName>Chilton Realty Income Growth Fund C</fullName>
            </value>
            <value>
                <fullName>Chilton Realty Income Growth Fund I</fullName>
            </value>
            <value>
                <fullName>Gottex Endowment Strategy Fund A</fullName>
            </value>
            <value>
                <fullName>Gottex Endowment Strategy Fund I</fullName>
            </value>
            <value>
                <fullName>Gottex Multi Asset Endowment Fund</fullName>
            </value>
            <value>
                <fullName>Horizon Core Value SMA</fullName>
            </value>
            <value>
                <fullName>Horizon High Yield Opportunity SMA</fullName>
            </value>
            <value>
                <fullName>Horizon Research SMA</fullName>
            </value>
            <value>
                <fullName>Horizon Spinoff Fund A</fullName>
            </value>
            <value>
                <fullName>Horizon Spinoff Fund C</fullName>
            </value>
            <value>
                <fullName>Horizon Spinoff Fund I</fullName>
            </value>
            <value>
                <fullName>Kinetics Alternative Income Fund A</fullName>
            </value>
            <value>
                <fullName>Kinetics Alternative Income Fund C</fullName>
            </value>
            <value>
                <fullName>Kinetics Alternative Income Fund I</fullName>
            </value>
            <value>
                <fullName>Kinetics Alternative Income Fund NL</fullName>
            </value>
            <value>
                <fullName>Kinetics Global Fund C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>