WMG112519/force-app/main/default/objects/Historical_Mars_Meeting__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>40</length>
    <type>Text</type>
</CustomField>